# CommProto

./: CMakeLists.txt
Arduino-toolchain/: BoardOptions.cmake
AuthDevice/: AuthChains.h  AuthDevice.cpp  AuthDevice.h  AuthDeviceWrapper.h  CMakeLists.txt  main.cpp
AuthService/: CMakeLists.txt  main.cpp
CommProto/: CMakeLists.txt
CommProto/interface/commproto/messages/: MessageBase.h  MessageMapper.h
CommProto/interface/commproto/parser/: ByteStream.h  Handler.h  MessageBuilder.h  Parser.h  ParserDelegatorFactory.h
CommProto/interface/commproto/variable/: Context.h  Variable.h  VariableBase.h  VariableHandler.h  VariableMessage.h  VariableParser.h
CommProto/pd/esp/interface/: SocketImpl.h
CommProto/pd/unix/interface/: SocketImpl.h
CommProto/pd/unix/src/: SocketImpl.cpp
CommProto/pd/windows/src/: SocketImpl.cpp
CommProto/src/: ContextImpl.cpp  MappingType.h  MessageBuilder.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp  TypeMapperImpl.cpp  TypeMapperImpl.h  TypeMapperObserver.h  Variable.cpp
CommProto/test/: ByteStreamTest.cpp
CommProtoLib/: CMakeLists.txt
CommProtoLib/src/: ChannelMappingHandler.cpp  Connection.cpp  ContextImpl.cpp  Dispatch.cpp  Logging.cpp  MappingType.h  MessageBuilder.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp  SenderMaping.cpp  TypeMapperImpl.cpp
CommProtoLib/src/control/: ButtonImpl.cpp  ButtonImpl.h  ControlBase.cpp  ControlBase.h  HorizontalLayoutImpl.cpp  HorizontalLayoutImpl.h  IdProvider.h  LabelImpl.cpp  LabelImpl.h  NotificationImpl.cpp  NotificationImpl.h  ParserDelegatorUtils.cpp  SliderImpl.cpp  SliderImpl.h  ToggleImpl.cpp  ToggleImpl.h  UIControllerImpl.cpp  UIControllerImpl.h  UIFactory.cpp  UxControllers.cpp  UxGenerator.h  VerticalLayoutImpl.h
CommProtoLib/src/endpoint/: ChannelMappingHandler.cpp  ChannelParserDelegator.cpp  ChannelTerminationHandler.cpp  ParserDelegatorFactory.cpp
CommProtoLib/src/logger/: FileLogger.cpp
CommProtoLib/src/messages/: MessageMapper.cpp  TypeMapper.cpp  TypeMapperImpl.cpp  TypeMapperObserver.h
CommProtoLib/src/parser/: MessageBuilder.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp  ParserDelegatorUtils.cpp  TypeMapperImpl.h  TypeMapperObserver.h
CommProtoLib/src/service/: ChannelParserDelegator.cpp  Connection.cpp  Dispatch.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp  RegisterChannelChain.cpp  RegisterIdHandler.cpp  ServiceHandlers.cpp
CommProtoLib/src/utils/: JSONUtils.cpp
CommProtoLib/test/: ByteStreamTest.cpp
CommProtoService/: CMakeLists.txt
CommProtoService/interface/commproto/control/ux/: Button.h  Control.h  ControlCollection.h  HorizontalLayout.h  Label.h  Notification.h  ParserDelegatorUtils.h  Slider.h  Toggle.h  UIController.h  UIFactory.h  UxControllers.h  VericalLayout.h
CommProtoService/interface/commproto/service/: Connection.h  ParserDelegatorFactory.h  RegisterChannelHandler.h  UnsubscribeHandler.h
CommProtoService/interface/commproto/utils/: JSONUtils.h
CommProtoService/src/config/: ConfigParser.cpp
CommProtoService/src/control/ux/: ButtonImpl.cpp  ButtonImpl.h  HorizontalLayoutImpl.h  IdProvider.h  LabelImpl.cpp  LabelImpl.h  NotificationImpl.cpp  NotificationImpl.h  ParserDelegatorUtils.cpp  SliderImpl.cpp  SliderImpl.h  TemplateEngine.cpp  TemplateEngine.h  ToggleImpl.cpp  ToggleImpl.h  UIControllerImpl.cpp  UIControllerImpl.h  UIFactory.cpp  UxControllers.cpp  UxGenerator.h  VerticalLayoutImpl.h
CommProtoService/src/service/: Connection.cpp  Dispatch.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp  RegisterChannelHandler.cpp  SendToHandler.cpp  SubscribeHandler.cpp  UnsubscribeHandler.cpp
CommProtoService/src/utils/: JSONUtils.cpp  Logging.cpp
ConcurrentQueue/: CMakeLists.txt
Dispatch/: CMakeLists.txt  main.cpp
Dispatch/config/: dispatchConfig.cfg
Endpoint/: CMakeLists.txt  main.cpp
Endpoint/config/: endpoint.cfg
EspApp/: CMakeLists.txt  DeviceWrapper.cpp  DeviceWrapper.h  SDKWrapper.h  source.cpp
Logger/: CMakeLists.txt
Logger/src/: Logging.cpp  Logging.h
ServerApp/: CMakeLists.txt  PlantData.cpp  PlantData.h  ServerWrapper.cpp  ServerWrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SocketLib/: CMakeLists.txt
SocketLib/interface/: ByteStream.h  Common.h  Context.h  Handler.h  MessageBuilder.h  Parser.h  ParserDelegator.h  ParserDelegatorFactory.h  Socket.h  TypeBase.h  TypeMapper.h  TypeName.h  Variable.h
SocketLib/pd/unix/interface/: SocketImpl.h
SocketLib/pd/unix/src/: SocketImpl.cpp
SocketLib/pd/windows/interface/: SocketImpl.h
SocketLib/pd/windows/src/: SocketImpl.cpp
SocketLib/src/: MappingType.h  MessageBuilder.cpp  ParserDelegatorFactory.cpp  TypeMapperImpl.cpp  TypeMapperImpl.h  TypeMapperObserver.h
SocketLib/test/: ByteStreamTest.cpp  CMakeLists.txt
UXService/: CMakeLists.txt  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpServer.cpp  HttpServer.h  UxDelegatorProvider.cpp  UxDelegatorProvider.h  main.cpp
UXService/config/: uxConfig.cfg  uxservice.cfg
UXService/html_files/: index.html  mime_types.json  scripts.js  style.css
UXService/html_files/templates/: notification.html
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: msvc_target_properties.user.in  toolchain.cmake  utility.cmake
libraries/CommProto/: CMakeLists.txt  CommProto.h  library.properties
libraries/CommProto/src/: ContextImpl.cpp  MessageBuilder.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp
libraries/CommProto/test/: CMakeLists.txt
libraries/DeviceWrapper/: CMakeLists.txt  DeviceWrapper.cpp  DeviceWrapper.h  SDKWrapper.h  library.properties
libraries/Logging/: CMakeLists.txt  Logging.cpp  library.properties
makelib/: makelib.py
poco/: CMakeLists.txt
poco/lib/: PocoDataODBCd.lib  PocoDataSQLited.lib  PocoDatad.lib  PocoEncodingsd.lib  PocoFoundationd.lib  PocoJSONd.lib  PocoMongoDBd.lib  PocoNetd.lib  PocoRedisd.lib  PocoUtild.lib  PocoXMLd.lib  PocoZipd.lib
rapidjson/: CMakeLists.txt
severapp_res/: app.ini  ghost_pepper.json
sketches/auth_device/: auth_device.ino
sketches/endpoint_base/: endpoint_base.ino
(+124 files in other folders)
